# MagicPineconeBackend

./: .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  example.env  main.py  pyproject.toml
core/: config.py
database/: db_connect.py  models.py
internal/: course_fetcher.py  scheduler.py
routers/: course.py  test.py
schemas/: course_schema.py
scripts/general/: db_connect.py
