[project]
name = "amazingpineconebackend"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.13.7"
dependencies = [
    "dotenv>=0.9.9",
    "fastapi>=0.135.1",
    "psycopg2>=2.9.11",
    "pydantic-settings>=2.13.1",
    "pyyaml>=6.0.3",
    "sqlalchemy>=2.0.48",
    "uvicorn>=0.41.0",
]
